--- a/_posts/회고/부스트캠프/2025-07-27-부스트캠프 챌린지 2주차 회고.md
+++ b/_posts/회고/부스트캠프/2025-07-27-부스트캠프 챌린지 2주차 회고.md
@@ -14,7 +14,7 @@ math: true
 mermaid: true
 ---
 <p align="center" style="color:#808080; font-size:14px">
-  <img src="https://velog.velcdn.com/images/landelyse/post/700f5666-1366-4b85-8f03-92fb79947703/image.jpeg"
+  <img src="https://velog.velcdn.com/images/landelyse/post/700f5666-1366-4b85-8f03-92fb79947703/image.jpeg" alt="디버깅 고라파덕"
        style="padding: 0;margin:0;"> 학습한 걸 듣는 내 디버깅 고라파덕
 </p>
 
@@ -214,7 +214,7 @@ mermaid: true
 
 ## Thanks to
 <p align="center" style="color:#808080; font-size:14px">
-  <img src="https://velog.velcdn.com/images/landelyse/post/f749d63e-bff4-411a-ae9d-42432ec9c79a/image.jpeg"
+  <img src="https://velog.velcdn.com/images/landelyse/post/f749d63e-bff4-411a-ae9d-42432ec9c79a/image.jpeg" alt="이제는 당연하게 내 침대에서 자고 있는 봄이"
        style="padding: 0;margin:0;"> 이제는 당연하게 내 침대에서 자고 있는 봄이
 </p>
 
