--- a/_posts/회고/부스트캠프/2025-08-04-부스트캠프 챌린지 3주차 회고.md
+++ b/_posts/회고/부스트캠프/2025-08-04-부스트캠프 챌린지 3주차 회고.md
@@ -14,7 +14,7 @@ math: true
 mermaid: true
 ---
 <p align="center" style="color:#808080; font-size:14px">
-  <img src="https://velog.velcdn.com/images/landelyse/post/adbf1a7d-3cfa-4e08-b421-2c9b4b1c083b/image.png"
+  <img src="https://velog.velcdn.com/images/landelyse/post/adbf1a7d-3cfa-4e08-b421-2c9b4b1c083b/image.png" alt="미션 대충하면 찾아올 거 같은 눈빛"
        style="padding: 0;margin:0;">미션 대충하면 찾아올 거 같은 눈빛...
 </p>
 
